--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: "PoopMap Bio"
 description: "Show your poops from PoopMap in your bio"
+branding:
+  icon: user-check
+  color: gray-dark
+  
 inputs:
   personal_access_token: # must include all 'user' scopes
     description: "A GitHub personal access token (PAT) that includes all 'user' scopes"
